--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Secpnd Git repo</title>
+    <title>My Second Git repo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I can push to github</h1>
+    <h1>I can push to github.com</h1>
     <h2>Mama i can code now</h2>
     <h3>New code changed to orange</h3>
     <p>More paragraph</p>
     <p>I am coding coding and coding</p>
+    <img src="BTS1.jpg" alt="BTS1">
+    <img src="BTS.jpg" alt="BTS">
 </body>
 </html>
