--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <h2>Mama i can code now</h2>
     <h3>New code changed to orange</h3>
     <p>More paragraph</p>
+    <img src="images/BTS2.jpg" alt="">
     <p>I am coding coding and coding</p>
-    <img src="BTS1.jpg" alt="BTS1">
-    <img src="BTS.jpg" alt="BTS">
+    <img src="BTS1.jpg" alt="BTS1" class="bang"> <br>
+    <img src="BTS.jpg" alt="BTS" class="bang">
 </body>
 </html>
